--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 simplelog = "0.9.0"
-native-windows-gui = {version="1.0.11", features=["extern-canvas", "animation-timer", "cursor", "notice", "status-bar"]}
-native-windows-derive = {version="1.0.3"}
+native-windows-gui = "1.0.11"
+native-windows-derive = "1.0.3"
 bmp = "0.5.0"
