--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,5 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 simplelog = "0.9.0"
-native-windows-gui = "1.0.11"
-native-windows-derive = "1.0.3"
-bmp = "0.5.0"
 argparse = "0.2.2"
+ggez = "0.5.1"
